--- a/VRChat/51/1194551.html
+++ b/VRChat/51/1194551.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "cHmSORK5f/bEauI4m+aA/HNLpEeaY1cn8aQ1ctO0Ofk="></script>
+    "BGwRBO6Y3E2gpVKwpt72CpbaW+u3I1JKG7wiCyfv7v4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"「ナナナ/ネコシロ」用髪型セット","description":"『ナナナ用髪型セット』\n\nVRC対応アバター「ナナナ/ネコシロ」用髪型セットです。\nVRC以外やナナナ以外への利用も可なので\n利用規約を参考にご自由にお使いください。\n\nDynamicBone設定済みです。\n\nラインナップは以下の通り\n・ロングヘアー\n・ツインテール\t\n\n・アホ毛\n・前アホ毛\n・前垂れアホ毛\n・触覚\n・お団子\n\n----------------------\n使い方\n\t1.Headボーンの子にNaNaNaLongHair/NaNaNaTwinTailHair/HairOptionの\n\t  Prefab（選択した際にInspectorにTransformとかが表示される方 ）を\n\t  入れます。\n\n\t2.不要なHairオブジェクトやボーンなどを削除します。\n\t\n\t\n・ナナナ同梱の猫耳や髪と色が違う場合\n\t該当のオブジェクトを選択し、SkinnedMeshRenderのLighting、\n\tAnchor Overrideに他の髪や猫耳などと同じメッシュをアサインします。\n\t（ナナナのprefabではMayuになってるはずです）\n\tAnchor_Override_Sample.PNG参照\n\n・リボンなどが浮く場合\n\t一度DynamicBoneのコンポーネントをコピーし、\n\tリムーブして位置調整を行った後に再度、\n\tPaste Component As Newしてください。\n\n----------------------\n利用規約\n\n\t同梱のLICENSE.txtに準じます。\n\t要約：\n\t\t* テクスチャ、モデルなど製品に含まれるものを改変することを許可する\n\t\t* 商用利用可能\n\t\t* R-18での利用可能,R-18Gでの利用不可\n\t\t* 再配布/再販売の禁止,VRCにおけるペデスタル利用の可\n\t\t* VRMファイルへの利用の許可、ただし他者が利用できる形式での出力を許可しない\n\t\t* 政治, 宗教, 民族問題に関わる利用を禁止\n\t\t* 他者または集団に対する誹謗中傷のための利用を禁止\n\n\t作者または著作者は, 本製品に起因または関連, 利用によって生じる一切の請求, 損害, その他の義務について何らの責任も負わないものとします.\n\n\tこの規約は製品を購入, または入手した瞬間効力を発揮し利用者は規約に同意したものと見做します.\n\n\tこの規約は著作者が属する国の倫理の下で解釈されると見做します.\n\n\tまた, この規約は作者または著作者の意思により変更される可能性があります\n\n使用素材\n\n・【Arktoon-Shaders】 \n\tsynqark 様【https://booth.pm/ja/items/1027997】\n\n----------------------\n\n更新履歴\n\n2019/01/24 リリース\n2019/01/25 ツインテールのウェイト修正\n2019/04/25 ライセンスファイルの追加、arktoonシェーダーの採用\n2019/04/27 プレファブが壊れていたため更新\n\n----------------------\n\n作成・配布者　siodome0","url":"https://booth.pm/ja/items/1194551","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/55d0b3cd-8d44-43f0-8467-7e99fcc0d318/i/1194551/cd7f9598-d6fc-438b-9074-e7edf86d1b93_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cHmSORK5f/bEauI4m+aA/HNLpEeaY1cn8aQ1ctO0Ofk="></script>
+    nonce="BGwRBO6Y3E2gpVKwpt72CpbaW+u3I1JKG7wiCyfv7v4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1194551/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               181
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1194551/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               181
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
