--- a/VRChat/58/1194458.html
+++ b/VRChat/58/1194458.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0GGVp98/YIF3/49oZcFxJoNJRyVDiJzkH/O5d/eMTw8="></script>
+    "rtfFPug4xaY8EKq+vDfvUkf+DhB8LlFP86yiRAPniog="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"i-Cave 3D","description":"あなたの行きつけの洞窟は、何処ですか？\n「i-Cave（アイケイブ）」は、\nご自宅の畳一畳のスペースに置ける、現代人のための洞窟です。\n「本を一冊だけ持って入る」\n「スマートフォンの電源を切って、頭の中をカラッポにする」\n「勉強をしたいけど、モノがあふれた部屋で集中できない」\n「究極のゲーミングルーム」・・など、\n使い方は自由です。基本的には、「全く何も持ち込まない＝０」もしくは、「１点だけ持ち込んで、それに集中する＝１」のどちらかに使用することをお薦めします。\ni-Caveは、簡素でありながらもサイズ感など計算しつくした洞窟のシェル（殻）です。心落ちつく空間を自由に楽しんでいただけたら幸いです。\n本商品は、実際のi-Caveから正確に3D化したバーチャルi-Caveです。実物同様に、一歩中に入ると無限の宇宙を感じることができます。\n\n\n内容物\n\n　☆icave3D_pack.unitypackage\n　　　アニメーション付きのicave3D一式のUnityPackage\n　　　icave3dにアニメーターが設定してあります。\n　　　このアニメーターのONOFF(Bool)を切り替えることで\n　　　宇宙が広がったり、閉じたりするアニメーションを実装しております。\n         ※VRC以外に使用する場合は\n　　　　icave3d、icave3d_switchON（OFF）に適用されている\n　　　　VRC用のコンポーネントを削除してください。　　　       \n\n　☆icaveTex_Unlit.png\n          明るいワールドでの使用の際に推奨するテクスチャ\n          このテクスチャ１枚を適用したUnlitマテリアル一個でOK\n\n　☆icaveTex_Alpha.png\n　　　 暗いワールドでの使用の際に推奨するテクスチャ\n　　　 このテクスチャ１枚を適用したUnlitマテリアルと\n　　　 Standardマテリアルの2つで適用\n　　　（テクスチャパス２枚のシェーダは用意しておりません）\ni-Caveが839ポリゴン\nスイッチがON用とOFF用合わせて36*2＝72ポリゴン\n宇宙部分が760ポリゴン\n\n上記合わせて合計1671ポリゴンになります。","url":"https://booth.pm/ja/items/1194458","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/3d8f47ba-02a3-4114-ba50-5fc58d5f7f75/i/1194458/f59b95bc-1241-4aba-bf07-a2864c34992c_base_resized.jpg"}
     </script>
@@ -84,16 +84,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0GGVp98/YIF3/49oZcFxJoNJRyVDiJzkH/O5d/eMTw8="></script>
+    nonce="rtfFPug4xaY8EKq+vDfvUkf+DhB8LlFP86yiRAPniog="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -117,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -131,7 +130,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -176,7 +176,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1194458/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
@@ -191,14 +191,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1194458/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
