--- a/VRChat/25/1192825.html
+++ b/VRChat/25/1192825.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Bkj6gSBLevWGma6raSLp+9J6Gy35QgVDKhmW84F0C6A="></script>
+    "6ILJ2YLCt9UVroc43vCf6Ck7x7cZAeLOcAObbpu+GVU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Mecha_Fox_Mask","description":"model:Mecha_Fox_Mask\n\n■概要■\n使用する際にはある程度のUnityの知識が必要です。アバターではないのでご注意ください。\n\nMecha_Fox_Mask\n・Base\t\t△316　：マスクの最下層の部分です。\n・Exterior\t△820　：主に見えている外装の部分。\n　※開閉シェイプキー[open]が入っています。\n・Headphones\t△560　：耳当てっぽいもの\n\nunitypackage、fbx、png形式のtextureが入っています。\n\n主にVRChat、Unity等で使用する事が前提のデータです。\n\nサンプル画像ではまんまるしぇーだーを使用していますが内容ではstandardになっています。好きなシェーダーをお使いください。\n追記：002からArktoonShaderを使用しています。\n\n■ArktoonShader\n使用しているArktoonShaderはsynqark氏が作成されたVRChat向けの無料Shaderです。\nこちらからダウンロードが可能です。\n→https://booth.pm/ja/items/1027997\n\n\n■利用規約■\n・著作権はutako(Twitter:@utako_png)が保有しています。\n・改変前、改変後を含むこのモデルの販売、再配布を禁止します。\n・本データを使用し何らかの問題が発生した場合、制作者は一切責任をとりません。\n・本利用規約は予告なく変更される場合があります。\n\n■質問、お問い合わせ等■\nTwitter：@utako_png\n\n■追記■\nテスト的に販売開始した商品です。購入の際にはブーストして頂ければ幸いです。幸いです。","url":"https://booth.pm/ja/items/1192825","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/88391aae-f2c2-47df-bc5c-81b896c5f767/i/1192825/db1c946b-8189-45d0-9120-c9e766176bcc_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Bkj6gSBLevWGma6raSLp+9J6Gy35QgVDKhmW84F0C6A="></script>
+    nonce="6ILJ2YLCt9UVroc43vCf6Ck7x7cZAeLOcAObbpu+GVU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1192825/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              487
+                              488
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1192825/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              487
+                              488
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
