--- a/VRChat/86/1190286.html
+++ b/VRChat/86/1190286.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "h83ND4qIRw0w1gr0xhS8S2YWgVIrQZdJmLx9FLc42OU="></script>
+    "eignYrwB25cjR6Y3gkhBDVIHoJz95VnyeMH4z+2oIVg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"贈答用カスタム首輪キット","description":"【贈答用カスタム首輪キット】v1.00\n\nカスタム可能な贈答用首輪キットです。\n購入者に限り、1度まで再配布が可能。\nプレゼント用にご利用いただけます。\n\n大きさを調整することで首輪としての用途だけでなく、腕輪・ツールベルト・アクセサリーなどとして使用することも可能です。\n\n※ 古い商品のためPhysicsBoneは未対応です。あらかじめご了承下さい。","url":"https://booth.pm/ja/items/1190286","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/8eb7df68-18ab-47b3-995f-550289ccaf81/i/1190286/b2bc885c-234d-413b-a24c-63e8f742c7f1_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="h83ND4qIRw0w1gr0xhS8S2YWgVIrQZdJmLx9FLc42OU="></script>
+    nonce="eignYrwB25cjR6Y3gkhBDVIHoJz95VnyeMH4z+2oIVg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1190286/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               513
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1190286/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               513
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
