--- a/VRChat/56/1192556.html
+++ b/VRChat/56/1192556.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "phX8FBXJRVRgOUYWW+8LEY3dw3W0EmX2MPalbeF7an0="></script>
+    "QpENu+D2QB6P7uNKOScf+wRREWPBOWRKVakwLgw15Ro="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"お皿","description":"お皿です。\n\n使用シェーダー：arktoon\n\n■ License\nMIT License - LICENSE.txt","url":"https://booth.pm/ja/items/1192556","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/030a2645-c1e5-4596-84e0-6756664df27c/i/1192556/814b699e-af7b-470e-9c09-5bdf2bd140a7_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="phX8FBXJRVRgOUYWW+8LEY3dw3W0EmX2MPalbeF7an0="></script>
+    nonce="QpENu+D2QB6P7uNKOScf+wRREWPBOWRKVakwLgw15Ro="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,7 +162,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1192556/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               99
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1192556/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               99
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
