--- a/VRChat/46/1192546.html
+++ b/VRChat/46/1192546.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "qkUBOwRhljdUhHskTT3ShFQrDiGi98GqAys9+lJdLTQ="></script>
+    "v9LXd9f8dOXJIcmNc4qlFw3/wzzjxt5Tc2PcNxbdx/k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"もくし人形","description":"もくし人形です。\n煮るなり焼くなり爆破するなりご自由にどうぞ！\n\n使用シェーダー：arktoon\n\n■ License\nCC0","url":"https://booth.pm/ja/items/1192546","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/030a2645-c1e5-4596-84e0-6756664df27c/i/1192546/56f22f27-6b8b-4d17-b0e3-8c8e96f73335_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qkUBOwRhljdUhHskTT3ShFQrDiGi98GqAys9+lJdLTQ="></script>
+    nonce="v9LXd9f8dOXJIcmNc4qlFw3/wzzjxt5Tc2PcNxbdx/k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,7 +162,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1192546/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1192546/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
